--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 <form id="form1" class="well col-lg-12" action="enviar.php" method="post" name="form1" enctype="multipart/form-data">
     <div class="row">
         <div class="col-lg-6">
-            <label>Rut*</label> <input id="Rut" class="form-control" type="text" name="Rut" /> 
-            <label>Nombre*</label> <input id="Nombre" class="form-control" type="text" name="Nombre" /> 
-            <label>Apellido Paterno*</label> <input id="Paterno" class="form-control" type="text" name="Paterno" /> 
-            <label>Apellido Materno*</label> <input id="Materno" class="form-control" type="text" name="Materno" /> 
-            <label>Email*</label> <input id="Email" class="form-control" type="email" name="Email" />
+            <label>Rut *</label> <input id="Rut" class="form-control" type="text" name="Rut" required/> 
+            <label>Nombre *</label> <input id="Nombre" class="form-control" type="text" name="Nombre" required/> 
+            <label>Apellido Paterno *</label> <input id="Paterno" class="form-control" type="text" name="Paterno" required/> 
+            <label>Apellido Materno *</label> <input id="Materno" class="form-control" type="text" name="Materno" required/> 
+            <label>Email *</label> <input id="Email" class="form-control" type="email" name="Email" required/>
         </div>
         <div class="col-lg-6">
-            <label>Cargo*</label>
-            <select id="Cargo" name="Cargo" class="form-control">
+            <label>Cargo *</label>
+            <select id="Cargo" name="Cargo" class="form-control" required>
                 <option value="1">Supervisor Eléctrico</option>
                 <option value="2">Eléctrico Primera</option>
                 <option value="2">Eléctrico Segunda</option>
@@ -41,12 +41,12 @@
                 <option value="14">Jefe de Proyecto</option>
             </select>
 
-        <label>Mensaje*</label><textarea id="Mensaje" class="form-control" name="Mensaje" rows="11"></textarea>
+        <label>Mensaje *</label><textarea id="Mensaje" class="form-control" name="Mensaje" rows="11"></textarea>
         </div>
 
         <div class="col-lg-6">
-            <label for="exampleInputFile">Adjuntar CV en formato .PDF</label>
-            <input type="file" name="Archivo" id="Archivo" accept="application/pdf" class="form-control">
+            <label for="exampleInputFile">Adjuntar CV en formato .PDF *</label>
+            <input type="file" name="Archivo" id="Archivo" accept="application/pdf" class="form-control" required>
         </div>
         <div class="col-lg-6">
             <br>
