--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">    
-    <meta name="author" content="Innoweb - Peterson F.">
+    <meta name="Israel Teran" content="Correo PHP">
     <title>Formulario</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/jumbotron.css" rel="stylesheet">
