--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <form id="form1" class="well col-lg-12" action="enviar.php" method="post" name="form1" enctype="multipart/form-data">
     <div class="row">
         <div class="col-lg-6">
-            <label>Rut *</label> <input id="Rut" class="form-control" type="text" name="Rut" required/> 
-            <label>Nombre *</label> <input id="Nombre" class="form-control" type="text" name="Nombre" required/> 
-            <label>Apellido Paterno *</label> <input id="Paterno" class="form-control" type="text" name="Paterno" required/> 
-            <label>Apellido Materno *</label> <input id="Materno" class="form-control" type="text" name="Materno" required/> 
+            <label>Rut * </label> <input class="form-control" type="text" name="Rut" required/> 
+            <label>Nombre * </label> <input class="form-control" type="text" name="Nombre" required/> 
+            <label>Apellido Paterno *</label> <input class="form-control" type="text" name="Paterno" required/> 
+            <label>Apellido Materno *</label> <input class="form-control" type="text" name="Materno" required/> 
             <label>Email *</label> <input id="Email" class="form-control" type="email" name="Email" required/>
         </div>
         <div class="col-lg-6">
@@ -40,8 +40,7 @@
                 <option value="13">Administrador de Proyecto</option>
                 <option value="14">Jefe de Proyecto</option>
             </select>
-
-        <label>Mensaje *</label><textarea id="Mensaje" class="form-control" name="Mensaje" rows="11"></textarea>
+            <label>Mensaje *</label><textarea class="form-control" name="Mensaje" rows="11" required></textarea>
         </div>
 
         <div class="col-lg-6">
